--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       ## Certificate Settings (Let's Encrypt) -  https://docs.traefik.io/https/acme/#configuration-examples ##
       - "--certificatesresolvers.resolver.acme.tlschallenge=true"
       # - "--certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--certificatesresolvers.resolver.acme.email=betalixt4@protonmail.com"
+      - "--certificatesresolvers.resolver.acme.email=${DOCKER_ACME_EMAIL}"
       - "--certificatesresolvers.resolver.acme.storage=/letsencrypt/acme.json"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # <== Volume for docker admin
