--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 DOCKER_BASE_DOMAIN=subdomain.example.com
 DOCKER_TRAEFIK_BASICAUTH=username:password
 DOCKER_ACME_EMAIL=username@example.com
+DOCKER_POSTGRES_PASSWORD=password
