--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -6,8 +6,12 @@ services:
     restart: always
     networks:
       - web
+    ports:
+      - 5432:5432
     environment: 
       POSTGRES_PASSWORD: ${DOCKER_POSTGRES_PASSWORD}
+    logging:
+      driver: "fluentd"
   
   adminer:
     image: adminer
